# MyCraft

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Compile.py  LICENSE  Last_Compiled.txt  Mycraft-Linux  README.md  imgui.ini  make.bat  run.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
MyCraft/: README.md  Settings.txt
MyCraft/Assets/: Atlas.xcf  Bez nazwy.xcf  Gui.af  Settings.myc  Settings.txt
MyCraft/Include/glad/: CMakeLists.txt  glad.h
MyCraft/shaders/: FullScreen_vert.glsl  Gui_Frag.glsl  Gui_vert.glsl  Selection_Frag.glsl  Selection_Vert.glsl  fragment.glsl  vertex.glsl
MyCraft/shaders/Bloom/: Blur_frag.glsl  Combine_frag.glsl  Extract_frag.glsl
MyCraft/shaders/SkyBox/: SkyBox_frag.glsl  SkyBox_vert.glsl
MyCraft/src/: Init.cpp  Main.cpp  Main.hpp  glad.c
MyCraft/src/GUI/: Gui.cpp  Gui.hpp  GuiFunctions.cpp  MultiplayerMenu.cpp
MyCraft/src/Network/: Client.cpp  Client.hpp  Net_Common.hpp  Network.cpp  Network.hpp  Server.cpp  Server.hpp  TsQueue.hpp
MyCraft/src/Player/: Breaking.cpp  Breaking.hpp  Colisions.cpp  Colisions.hpp  Movement.cpp  Movement.hpp
MyCraft/src/Render/: Camera.cpp  Camera.hpp  Frustum.cpp  Frustum.hpp  Mesh.cpp  Mesh.hpp  MeshManager.hpp  Mesher.cpp  SelectionBox.cpp  SelectionBox.hpp
MyCraft/src/Shader_Utils/: Shader.cpp  Shader.hpp
MyCraft/src/Utils/: EasingFunctions.cpp  EasingFunctions.hpp  FPS.cpp  FPS.hpp  Function.cpp  Function.hpp  Globals.cpp  Globals.hpp  InputManager.cpp  InputManager.hpp  Interpolater.hpp  Settings.cpp  Settings.hpp  Timer.hpp  resource.rc
MyCraft/src/World/: Block.cpp  Block.hpp  Chunk.cpp  Chunk.hpp  Generation.cpp  Generation.hpp  (+6 more)
MyCraftSyntax/: Package.json  language-configuration.json
MyCraftSyntax/syntaxes/: mycraft.tmLanguage.json
MyCraftSyntax/themes/: mycraft-color-theme.json
MyCraft_Server/: Client-Linux  Compile.bat  Compile.py  Server-Linux
MyCraft_Server/src/: Client.cpp  Server.cpp  resource.rc
(+13 files in other folders)
